WIP: feat(intro): support translation for korean, chinese

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -42,9 +42,9 @@
             ENG
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">中文</a>
-            <a class="dropdown-item" href="#">한국어</a>
+            <a class="dropdown-item" (click)="changeLang('en')">English</a>
+            <a class="dropdown-item" (click)="changeLang('ch')">中文</a>
+            <a class="dropdown-item" (click)="changeLang('ko')">한국어</a>
           </div>
         </li>
       </ul>
