--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -8,17 +8,17 @@
           <div class="col-lg-6">
             <h1 class="home-title mx-auto mt-4">Muzika</h1>
             <p class="home-subtitle mx-auto mt-3 mb-5">
-              Revolution and Redemption of Digital Music World <BR/>
-              through a decentralized blockchain-based ecosystem.
+              {{'intro-main.home-subtitle-1' | translate}} <BR/>
+              {{'intro-main.home-subtitle-2' | translate}}
             </p>
             <div class="home-btn">
-              <a class="mr-3">Project Teaser</a>
+              <a class="mr-3">{{'intro-main.project-teaser' | translate}}</a>
               <a href="assets/mzk-teaser-en.pdf" class="btn btn-custom mr-3">English</a>
               <a href="assets/mzk-teaser-kr.pdf" class="btn btn-custom mr-3">한국어</a>
               <a href="assets/mzk-teaser-ch.pdf" class="btn btn-custom">中國語</a>
             </div>
             <div class="home-btn mt-3">
-              <a class="mr-3">Whitepaper</a>
+              <a class="mr-3">{{'intro-main.whitepaper' | translate}}</a>
               <a href="assets/mzk-whitepaper-en.pdf" class="btn btn-custom mr-3">English</a>
             </div>
           </div>
@@ -42,7 +42,6 @@
 <mzk-intro-ecosystem></mzk-intro-ecosystem>
 
 <mzk-intro-mzk-coins></mzk-intro-mzk-coins>
-
 
 <mzk-intro-business></mzk-intro-business>
 
