--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -7,8 +7,8 @@
       </div>
       <h2 class="intro-section-title"> TEAM LEADERSHIP </h2>
       <p class="mt-4 intro-section-subtitle">
-        Co-founders are one of the youngest and most successful entrepreneurs in South Korea startup history, averagely aged at 22. <BR />
-        All of them were awarded Forbes 30 Under 30 Asia 2018.
+        {{'intro-leadership.subtitle-1' | translate}}<BR />
+        {{'intro-leadership.subtitle-2' | translate}}
       </p>
     </div>
     <div class="row mt-5">
