refactor(intro): support i18n with kor translation & ci deploy script

--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -26,7 +26,7 @@
               <h6 class="mb-0">
                 {{advisor.name}}
               </h6>
-              <small>{{advisor.position}}</small>
+              <div class="position mt-2">{{advisor.position}}</div>
             </div>
           </div>
           <ul class="pt-3 text-muted small">
