--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -24,10 +24,10 @@
               <h6 class="mb-0">
                 {{leader.name}}
               </h6>
-              <small>
+              <div class="position mt-2">
                 {{leader.position}} <BR/>
-                & Co-Founder
-              </small>
+                & {{'intro-leadership.co-founders' | translate}}
+              </div>
             </div>
           </div>
           <ul class="pt-3">
