--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -17,10 +17,11 @@
           <a class="nav-link" href="#mzk-coins">{{'intro-navbar.mzk-coins' | translate}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#investor">{{'intro-navbar.investors' | translate}}</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#leadership-team">{{'intro-navbar.team' | translate}}</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#investor">{{'intro-navbar.partners' | translate}}</a>
         </li>
 
         <li class="nav-item">
