--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -49,7 +49,7 @@
 
 <intro-team></intro-team>
 
-<mzk-intro-investor></mzk-intro-investor>
+<mzk-intro-partners></mzk-intro-partners>
 
 <intro-advisors></intro-advisors>
 
