refactor(intro): support responsive design

--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -5,7 +5,7 @@
     <div class="home-desc-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 pb-4">
             <h1 class="home-title mx-auto mt-4">Muzika</h1>
             <p class="home-subtitle mx-auto mt-3 mb-5">
               {{'intro-main.home-subtitle-1' | translate}} <BR/>
