--- a/projects/web/src/modules/shared/components/layout/layout.component.scss
+++ b/projects/web/src/modules/shared/components/layout/layout.component.scss
@@ -2,15 +2,13 @@
 
 :host {
   position: relative;
-  display: flex;
-  flex-direction: column;
+  display: block;
   min-height: 100vh;
   background-color: $background-color;
 }
 
 .main-content {
   height: 100%;
-  flex-grow: 1;
 }
 
 .backdrop {
