feat(intro): support responsive mobile design

--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -4,9 +4,11 @@
       <brand-icon-muzika></brand-icon-muzika>
       <span>Muzika</span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-toggler" type="button"
+       data-toggle="collapse" data-target="#navbarCollapse"
+       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fal fa-bars"></span>
-    </button>
+    </a>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
