--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -86,7 +86,7 @@
 .navbar-custom {
   background: white;
   padding: 12px 0;
-  width: 100%;
+  width: 100vw;
   border-radius: 0;
   z-index: 999;
   margin-bottom: 0;
