--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -215,10 +215,19 @@ h2.intro-section-title {
   font-size: $px2rem_48;
   font-weight: 700;
   color: #4d5256;
+
+  @media (max-width: 768px) {
+    font-size: 30px;
+  }
 }
 
 p.intro-section-subtitle {
   font-size: $px2rem_18;
   font-weight: 400;
   color: #878d91;
+
+  @media (max-width: 768px) {
+    font-size: 14px;
+  }
 }
+
