--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -11,9 +11,9 @@
         {{'intro-leadership.subtitle-2' | translate}}
       </p>
     </div>
-    <div class="row mt-5">
+    <div class="row mt-3 mt-sm-5">
       <div class="col-lg-4" *ngFor="let leader of leaders">
-        <div class="pt-4 pb-4 pr-3 pl-3">
+        <div class="pt-2 pt-sm-4 pb-4 pr-3 pl-3">
           <div class="row">
             <div class="col-xs-6 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
