--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -12,14 +12,14 @@
               {{'intro-main.home-subtitle-2' | translate}}
             </p>
             <div class="home-btn">
-              <a class="mr-3">{{'intro-main.project-teaser' | translate}}</a>
-              <a href="assets/mzk-teaser-en.pdf" class="btn btn-custom mr-3">English</a>
-              <a href="assets/mzk-teaser-kr.pdf" class="btn btn-custom mr-3">한국어</a>
+              <a class="mr-1 mr-sm-3">{{'intro-main.project-teaser' | translate}}</a>
+              <a href="assets/mzk-teaser-en.pdf" class="btn btn-custom mr-1 mr-sm-3">English</a>
+              <a href="assets/mzk-teaser-kr.pdf" class="btn btn-custom mr-1 mr-sm-3">한국어</a>
               <a href="assets/mzk-teaser-ch.pdf" class="btn btn-custom">中國語</a>
             </div>
             <div class="home-btn mt-3">
-              <a class="mr-3">{{'intro-main.whitepaper' | translate}}</a>
-              <a href="assets/mzk-whitepaper-en.pdf" class="btn btn-custom mr-3">English</a>
+              <a class="mr-1 mr-sm-3">{{'intro-main.whitepaper' | translate}}</a>
+              <a href="assets/mzk-whitepaper-en.pdf" class="btn btn-custom mr-1 mr-sm-3">English</a>
             </div>
           </div>
           <div class="col-lg-6">
