--- a/projects/web/src/modules/intro/scss/helper.scss
+++ b/projects/web/src/modules/intro/scss/helper.scss
@@ -14,11 +14,11 @@ $px2rem_60: 3.5rem;
   padding-top: 80px;
   position: relative;
   background: #fff;
-}
 
-.title-subtitle {
-  max-width: 600px;
-  font-size: 15px;
+  @media (max-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 
 .btn {
