feat(intro-roadmap): use right,left section info-box for ROADMAP

--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.scss
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.scss
@@ -53,6 +53,9 @@ footer {
       > a {
         font-size: 16px;
         color: #878d91;
+        @media (max-width: 768px) {
+          font-size: 14px;
+        }
       }
     }
   }
