--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -4,8 +4,8 @@
       <brand-icon-muzika></brand-icon-muzika>
       <p class="mb-0 mt-2">Muzika</p>
     </div>
-    <div class="row submenu pt-5 pl-5">
-      <div class="col pl-4">
+    <div class="row submenu pt-5 pl-sm-5">
+      <div class="col pl-sm-4">
         <h5 class="mb-3">Muzika</h5>
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="#home">{{'intro-footer.whitepapers' | translate}}</a></li>
@@ -15,21 +15,22 @@
           <li class="mb-2"><a routerLink="/beta">{{'intro-footer.services' | translate}}</a></li>
         </ul>
       </div>
-      <div class="col pl-4">
+      <div class="col pl-sm-4">
         <h5 class="mb-3">{{'intro-footer.community' | translate}}</h5>
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
           <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
           <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram' | translate}}</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
+          <!--<li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>-->
           <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
         </ul>
       </div>
       <div class="col">
         <h5 class="mb-3">{{'intro-footer.websites' | translate}}</h5>
         <ul class="mb-4 text-center">
-          <li class="mb-2"><a href="javascript:void(0);">English</a></li>
-          <li class="mb-2"><a href="javascript:void(0);">한국어</a></li>
+          <li class="mb-2"><a (click)="changeLang('en')">English</a></li>
+          <li class="mb-2"><a (click)="changeLang('ko')">한국어</a></li>
+          <li class="mb-2"><a (click)="changeLang('ch')">中文</a></li>
         </ul>
       </div>
     </div>
