--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
@@ -8,54 +8,69 @@
           <div class="section-title-icon">
             <i class="pe-7s-like2 text-custom"></i>
           </div>
-          <h2>ROADMAP</h2>
-          <p class="mt-4 text-muted">
+          <h2 class="intro-section-title">ROADMAP</h2>
+          <p class="mt-4 intro-section-subtitle">
             Our revolutionary journey has just begun
           </p>
         </div>
       </div>
     </div>
-    <div class="cd-horizontal-timeline">
-      <div class="timeline">
-        <div class="events-wrapper">
-          <div class="events">
-            <ol>
-              <li *ngFor="let timeline of timelineList; let i = index">
-                <a href="#0" [attr.data-date]="timeline.date" [attr.data-index]="i" [class.selected]="timeline.selected" [class.current]="timeline.current">
-                  <div class="topic-summary" [attr.data-date]="timeline.date" [attr.data-index]="i">
-                    {{timeline.topicTitle}}
-                  </div>
-                  {{timeline.topic}}
-                  <ng-container *ngIf="timeline.current">
-                    (Current)
-                  </ng-container>
-                </a>
-              </li>
-            </ol>
 
-            <span class="filling-line" aria-hidden="true"></span>
-          </div> <!-- .events -->
-        </div> <!-- .events-wrapper -->
-
-        <ul class="cd-timeline-navigation">
-          <li><a href="#0" class="prev inactive">Prev</a></li>
-          <li><a href="#0" class="next">Next</a></li>
-        </ul> <!-- .cd-timeline-navigation -->
-      </div> <!-- .timeline -->
-
-      <div class="events-content">
-        <ol>
-          <li *ngFor="let timeline of timelineList; let i = index" [attr.data-index]="i" [class.selected]="timeline.selected" [attr.data-date]="timeline.date">
-            <h2>{{timeline.title}}</h2>
-            <em>{{timeline.subtitle}}</em>
-            <!--<p>-->
-              <!--{{timeline.description}}-->
-            <!--</p>-->
-          </li>
-
-        </ol>
-      </div> <!-- .events-content -->
+    <div class="vertical-timeline">
+      <ng-container *ngFor="let roadmap of roadmaps; let i = index">
+        <div class="roadmap-box" [class.right]="i%2 == 1">
+          <div class="topic">
+            {{roadmap.topic | uppercase}}
+          </div>
+          <div class="info-box" *ngFor="let info of roadmap.list">
+            <span class="date">{{info.date}}</span>
+            <p class="text">{{info.text}}</p>
+          </div>
+        </div>
+      </ng-container>
     </div>
+
+    <!--<div class="cd-horizontal-timeline">-->
+      <!--<div class="timeline">-->
+        <!--<div class="events-wrapper">-->
+          <!--<div class="events">-->
+            <!--<ol>-->
+              <!--<li *ngFor="let timeline of timelineList; let i = index">-->
+                <!--<a href="#0" [attr.data-date]="timeline.date" [attr.data-index]="i" [class.selected]="timeline.selected" [class.current]="timeline.current">-->
+                  <!--<div class="topic-summary" [attr.data-date]="timeline.date" [attr.data-index]="i">-->
+                    <!--{{timeline.topicTitle}}-->
+                  <!--</div>-->
+                  <!--{{timeline.topic}}-->
+                  <!--<ng-container *ngIf="timeline.current">-->
+                    <!--(Current)-->
+                  <!--</ng-container>-->
+                <!--</a>-->
+              <!--</li>-->
+            <!--</ol>-->
+
+            <!--<span class="filling-line" aria-hidden="true"></span>-->
+          <!--</div> &lt;!&ndash; .events &ndash;&gt;-->
+        <!--</div> &lt;!&ndash; .events-wrapper &ndash;&gt;-->
+
+        <!--<ul class="cd-timeline-navigation">-->
+          <!--<li><a href="#0" class="prev inactive">Prev</a></li>-->
+          <!--<li><a href="#0" class="next">Next</a></li>-->
+        <!--</ul> &lt;!&ndash; .cd-timeline-navigation &ndash;&gt;-->
+      <!--</div> &lt;!&ndash; .timeline &ndash;&gt;-->
+
+      <!--<div class="events-content">-->
+        <!--<ol>-->
+          <!--<li *ngFor="let timeline of timelineList; let i = index" [attr.data-index]="i" [class.selected]="timeline.selected" [attr.data-date]="timeline.date">-->
+            <!--<h2>{{timeline.title}}</h2>-->
+            <!--<em [innerHtml]="sanitizer.bypassSecurityTrustHtml(timeline.subtitle)"></em>-->
+            <!--&lt;!&ndash;<p>&ndash;&gt;-->
+              <!--&lt;!&ndash;{{timeline.description}}&ndash;&gt;-->
+            <!--&lt;!&ndash;</p>&ndash;&gt;-->
+          <!--</li>-->
+
+        <!--</ol>-->
+      <!--</div> &lt;!&ndash; .events-content &ndash;&gt;-->
+    <!--</div>-->
   </div>
 </section>
 <!-- Team end  -->
