--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -1,3 +1,6 @@
+:host {
+  color: #192538;
+}
 
 .testimonial-client-img {
   width: 130px;
@@ -7,7 +10,7 @@
 
 ul {
   padding-left: 0;
-  color: #4d5256;
+  color: #333030;
 
   li {
     word-break: break-all;
@@ -16,6 +19,7 @@ ul {
 }
 
 .position {
+  color: #5a6d86;
   font-size: 13px;
   line-height: 20px;
 }
