--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
@@ -17,9 +17,11 @@ section {
     .team-desc {
       padding-left: 115px;
       .team-name {
+        color: #192538;
         font-size: 14px;
       }
       .team-position {
+        color: #5a6d86;
         font-size: 12px;
       }
     }
