--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
@@ -1,42 +1,10 @@
-
-h2 {
-  font-weight: 700;
-}
-
 .section {
-  background: #f8fafb;
-}
-
-a {
-  text-decoration: none;
-}
-
-dl, dt, dd, ol, ul, li {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
+  background: #192538;
 }
 
 .vertical-timeline {
   position: relative;
-  border-left: 1px solid #efefef;
+  border-left: 1px solid #35e8c6;
   margin-left: 50%;
 }
 
@@ -44,6 +12,7 @@ q:before, q:after {
   position: relative;
 
   .topic {
+    color: white;
     position: absolute;
     left: -430px;
     font-size: 20px;
@@ -53,22 +22,48 @@ q:before, q:after {
     margin-top: -13px;
     top: 50%;
   }
+
+  .circle {
+    position: absolute;
+    border-radius: 13px 13px;
+    border: 3px solid #35e8c6;
+    background: #192538;
+    top: 50%;
+    height: 14px;
+    width: 14px;
+    margin-top: -4px;
+    left: -8px;
+    z-index: 2;
+  }
+
+  .horizontal-line {
+    position: absolute;
+    border-bottom: 1px solid #35e8c6;
+    top: 50%;
+    margin-top: 2px;
+    height: 1px;
+    width: 100px;
+    left: -100px;
+    z-index: 1;
+  }
+
   .info-box {
     width: 400px;
-    border-radius: 3px 3px 3px 3px;
-    background-color: rgba(239, 239, 239, 0.2);
-    border: 0 solid rgba(239, 239, 239, 0.2);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    border: 1px solid #8196b2;
+    border-radius: 50px 50px;
     margin: 15px 30px;
-    padding: 14px 18px;
+    padding: 13px 30px;
 
     .date {
+      color: white;
       font-size: 16px;
       font-weight: 700;
     }
 
     .text {
       font-size: 14px;
+      color: #35e8c6;
       margin: 0;
       padding: 0;
     }
@@ -79,10 +74,23 @@ q:before, q:after {
       left: 0;
     }
 
+    .horizontal-line {
+      left: 0;
+      width: 80px;
+    }
+
     .info-box {
       margin-left: -430px;
     }
   }
+}
+
+.intro-section-title {
+  color: white;
+}
+
+.intro-section-subtitle {
+
 }
 
 @media (max-width: 768px) {
@@ -104,4 +112,53 @@ q:before, q:after {
       margin-left: 0 !important;
     }
   }
+}
+
+
+
+
+/*
+ SpinKit CSS animation for current status
+ */
+.spinner {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: -21px;
+  top: 50%;
+  margin-top: -17px;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #35e8c6;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% {
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
+    }
 }
