--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -214,7 +214,7 @@ button:focus {
 h2.intro-section-title {
   font-size: $px2rem_48;
   font-weight: 700;
-  color: #4d5256;
+  color: #192538;
 
   @media (max-width: 768px) {
     font-size: 30px;
@@ -224,7 +224,7 @@ h2.intro-section-title {
 p.intro-section-subtitle {
   font-size: $px2rem_18;
   font-weight: 400;
-  color: #878d91;
+  color: #5a6d86;
 
   @media (max-width: 768px) {
     font-size: 14px;
