--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
@@ -107,6 +107,10 @@
       margin-top: 30px;
     }
 
+    .circle, .horizontal-line {
+      display: none;
+    }
+
     .info-box {
       width: 100%;
       margin-left: 0 !important;
