--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -17,12 +17,12 @@
       <div class="col-lg-4" *ngFor="let advisor of advisors">
         <div class="pt-4 pb-4 pr-3 pl-3">
           <div class="row">
-            <div class="col-6 text-right">
+            <div class="col-5 col-sm-6 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
                 <img [src]="'assets/images/advisors/' + advisor.imagePath" class="img-fluid  rounded-circle img-thumbnail">
               </div>
             </div>
-            <div class="col-6 pt-5 pl-3">
+            <div class="col-7 col-sm-6 pt-5 pl-3">
               <h6 class="mb-0">
                 {{advisor.name}}
               </h6>
