--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -4,8 +4,7 @@
       <brand-icon-muzika></brand-icon-muzika>
       <span>Muzika</span>
     </a>
-    <a class="navbar-toggler" type="button"
-       data-toggle="collapse" data-target="#navbarCollapse"
+    <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"
        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fal fa-bars"></span>
     </a>
@@ -30,7 +29,7 @@
           <a class="nav-link" href="#advisors">{{'intro-navbar.advisors' | translate}}</a>
         </li>
 
-       <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="#roadmap">{{'intro-navbar.roadmap' | translate}}</a>
         </li>
 
@@ -41,7 +40,8 @@
         <li class="divider">&nbsp;</li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+             aria-expanded="false">
             <ng-container *ngIf="lang === 'en'">
               ENG
             </ng-container>
