feat(i18n/zh): translate whole sentences to chinese in 中文 fix(IE): support IE 10, IE 11 browser

--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -30,7 +30,7 @@
         <ul class="mb-4 text-center">
           <li class="mb-2"><a (click)="changeLang('en')">English</a></li>
           <li class="mb-2"><a (click)="changeLang('ko')">한국어</a></li>
-          <li class="mb-2"><a (click)="changeLang('ch')">中文</a></li>
+          <li class="mb-2"><a (click)="changeLang('zh')">中文</a></li>
         </ul>
       </div>
     </div>
