--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -19,7 +19,7 @@
           <div class="row">
             <div class="col-5 col-sm-6 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
-                <img [src]="'assets/images/advisors/' + advisor.imagePath" class="img-fluid  rounded-circle img-thumbnail">
+                <img [src]="'assets/images/advisors/' + advisor.imagePath" class="img-fluid rounded-circle img-thumbnail" width="130" height="130">
               </div>
             </div>
             <div class="col-7 col-sm-6 pt-5 pl-3">
