--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
@@ -9,9 +9,16 @@ h2 {
 
 .testimonial-client-img {
   img {
-    width: 100%;
-    max-width: 130px;
-    max-height: 130px;
+    width: 130px;
+    height: 130px;
+  }
+
+  @media(max-width: 768px) {
+    img {
+      width: 100px;
+      height: 100px;
+      margin-top: 15px;
+    }
   }
   margin: 0 0 0 auto;
 }
