--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
@@ -8,9 +8,9 @@
           <div class="section-title-icon">
             <i class="pe-7s-like2 text-custom"></i>
           </div>
-          <h2 class="intro-section-title">ROADMAP</h2>
+          <h2 class="intro-section-title">{{'intro-roadmap.title' | translate}}</h2>
           <p class="mt-4 intro-section-subtitle">
-            Our revolutionary journey has just begun
+            {{'intro-roadmap.subtitle' | translate}}
           </p>
         </div>
       </div>
