refactor(leadership): translate 'Awards'

--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <p class="awards">
-      Awards
+      {{'intro-leadership.awards' | translate}}
       <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb" target="_blank">
         <img src="assets/images/forbes.png" class="ml-3" height="45">
       </a>
