refactor(prototype): support prototype module with lazy loading

--- a/projects/web/src/modules/prototype/pages/main/main.component.html
+++ b/projects/web/src/modules/prototype/pages/main/main.component.html
@@ -9,15 +9,15 @@
     <section class="our-service">
       <div class="row icon">
         <div class="col">
-          <img src="../../assets/icon-01.png">
+          <img src="../../../../assets/icon-01.png">
           <div> Open </div>
         </div>
         <div class="col">
-          <img src="../../assets/icon-02.png">
+          <img src="../../../../assets/icon-02.png">
           <div> Copyright </div>
         </div>
         <div class="col">
-          <img src="../../assets/icon-03.png">
+          <img src="../../../../assets/icon-03.png">
           <div> Payment </div>
         </div>
       </div>
