--- a/projects/web/src/modules/prototype/pages/main/main.component.scss
+++ b/projects/web/src/modules/prototype/pages/main/main.component.scss
@@ -1,5 +1,5 @@
 .main-img {
-  background: url(../../assets/main.jpg);
+  background: url(../../../../assets/main.jpg);
   background-position-y: 50%;
   background-size: cover;
   height: 600px;
