--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -21,7 +21,7 @@
               <a class="mr-2 mr-sm-3">{{'intro-main.whitepaper' | translate}}</a>
               <a href="assets/mzk-whitepaper-en.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">English</a>
             </div>
-            <div class="home-btn mt-sm-3" id="muzika-studio-program">
+            <div class="home-btn mt-3" id="muzika-studio-program">
               <a class="mr-2 mr-sm-3">
                 Muzika Studio <div class="small">(18.07.23 - v0.0.9)</div>
               </a>
@@ -32,6 +32,10 @@
               <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.exe" target="_blank"
                  class="btn btn-custom mr-1 mr-sm-3">
                 <i class="fab fa-windows"></i> Windows
+              </a>
+              <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika-0.0.9-x86_64.AppImage" target="_blank"
+                 class="btn btn-custom mr-1 mr-sm-3">
+                <i class="fab fa-linux"></i> Linux
               </a>
             </div>
           </div>
