--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -1,28 +1,57 @@
-:host {
-  color: #192538;
+.section {
+  background: #192538;
+  color: #8196b2;
+}
+
+.intro-section-title {
+  color: white;
 }
 
 .testimonial-client-img {
-  width: 130px;
-  height: 130px;
+  position: absolute;
+  top: -67px;
+  left: 25px;
+  width: 95px;
+  height: 95px;
   margin: 0 0 0 auto;
+
+  img {
+    box-shadow: 0 3px 15px 0 #e6e6e6;
+  }
+}
+
+.leader-box {
+  position: relative;
+  background: white;
+  border-radius: 10px 10px;
+  box-shadow: 0 10px 10px 3px #1a1a1a;
+
+  .leader-name {
+    font-size: 16px;
+    color: #343c4d;
+  }
+
+  .position {
+    color: #5a6d86;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
 }
 
 ul {
   padding-left: 0;
   color: #333030;
+  margin: 0 9px 0 26px;
+  min-height: 330px;
 
   li {
     font-size: 14px;
+    color: #8196b2;
   }
 }
 
-.position {
-  color: #5a6d86;
-  font-size: 13px;
-  line-height: 20px;
-}
-
 .awards {
-  color: #4d5256;
+  font-weight: bold;
+  color: white;
 }
