--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -8,7 +8,7 @@
 .navbar-brand {
   outline: none;
   cursor: pointer;
-  color: black;
+  color: white;
   vertical-align: middle;
 
   brand-icon-muzika {
@@ -17,6 +17,14 @@
     margin-top: -1px;
     margin-right: 15px;
     height: $navbar-brand-size;
+
+    /deep/ .muzika-icon-striped-primary {
+      fill: white;
+    }
+
+    /deep/ .muzika-icon-striped-secondary {
+      fill: white;
+    }
   }
 
   span {
@@ -42,7 +50,7 @@
 @media (min-width: 200px) and (max-width: 768px) {
   .navbar-custom {
     background-color: white;
-    padding: 10px 0px !important;
+    padding: 10px 0 !important;
   }
   .navbar-custom .container {
     width: 95%;
@@ -73,7 +81,7 @@
 
 @media (max-width: 991px) {
   .nav-sticky .navbar-toggler {
-    color: #000;
+    color: white;
   }
 
   .bg-backslide, .bg-home-full, .home-slider .carousel-item, .home-slider .carousel {
@@ -87,7 +95,7 @@
 **********************/
 
 .navbar-custom {
-  background: white;
+  background: transparent;
   padding: 12px 0;
   width: 100vw;
   border-radius: 0;
@@ -100,7 +108,7 @@
 }
 
 .navbar-custom .navbar-nav li > a {
-  color: #878d91;
+  color: white;
   font-size: 14px;
   background-color: transparent;
   margin: 0 5px;
@@ -109,7 +117,7 @@
   transition: all 0.5s;
 
   &:hover {
-    color: #1a1a1a;
+    color: #76dbc7;
   }
 }
 
@@ -175,6 +183,28 @@
   }
 }
 
+.icon-lang {
+  background: url('../../../../assets/images/design/country.png') no-repeat;
+  background-size: 128px 30px;
+  width: 27px;
+  height: 25px;
+  display: inline-block;
+  margin-right: 6px;
+  float: left;
+
+  &.ko {
+    background-position: -2px -2px;
+  }
+
+  &.en {
+    background-position: -34px -2px;
+  }
+
+  &.zh {
+    background-position: -66px -2px;
+  }
+}
+
 .navbar-nav li a {
   .dropdown-menu a.dropdown-item {
     color: black;
@@ -193,4 +223,16 @@
   right: 0;
   width: 100%;
   z-index: 2050;
+}
+
+
+.dropdown-menu {
+  .dropdown-item {
+    cursor: pointer;
+  }
+
+  .dropdown-item.active {
+    background: #192538;
+    color: white;
+  }
 }
