--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
@@ -5,10 +5,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="section-title text-center mx-auto">
-          <div class="section-title-icon">
-            <i class="pe-7s-like2 text-custom"></i>
-          </div>
-          <h2>MEET OUR TEAM</h2>
+          <h2 class="intro-section-title">MEET OUR TEAM</h2>
         </div>
       </div>
     </div>
@@ -27,4 +24,5 @@
     </div>
   </div>
 </section>
+<img src="assets/images/design/wave-3.png" width="100%">
 <!-- Team end  -->
