--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -1,3 +1,5 @@
+<intro-floating-btns></intro-floating-btns>
+
 <!-- Home start -->
 <section class="section bg-home-full bg-home" id="home">
 
@@ -5,8 +7,8 @@
     <div class="home-desc-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 pb-4">
-            <h1 class="home-title mx-auto mt-4">Muzika</h1>
+          <div class="col-lg-6 pb-4 home-content">
+            <h1 class="home-title mx-auto mt-sm-4">Muzika</h1>
             <p class="home-subtitle mx-auto mt-3 mb-3 mb-sm-5">
               {{'intro-main.home-subtitle-1' | translate}} <BR/>
               {{'intro-main.home-subtitle-2' | translate}}
@@ -21,30 +23,48 @@
               <a class="mr-2 mr-sm-3">{{'intro-main.whitepaper' | translate}}</a>
               <a href="assets/mzk-whitepaper-en.pdf" target="_blank" class="btn btn-custom mr-1 mr-sm-3">English</a>
             </div>
-            <div class="home-btn mt-3" id="muzika-studio-program">
-              <a class="mr-2 mr-sm-3">
-                Muzika Studio <div class="small">(18.07.23 - v0.0.9)</div>
-              </a>
-              <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.dmg" target="_blank"
-                 class="btn btn-custom mr-1 mr-sm-3">
-                <i class="fab fa-apple"></i> Mac
-              </a>
-              <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.exe" target="_blank"
-                 class="btn btn-custom mr-1 mr-sm-3">
-                <i class="fab fa-windows"></i> Windows
-              </a>
-              <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika-0.0.9-x86_64.AppImage" target="_blank"
-                 class="btn btn-custom mr-1 mr-sm-3">
-                <i class="fab fa-linux"></i> Linux
-              </a>
+
+            <div class="home-btn mt-5" id="muzika-studio-program">
+              <h5>
+                Muzika Studio
+                <small>v0.0.9 (2018.07.23)</small>
+              </h5>
+              <div class="mr-3 mr-sm-3 mb-3">
+                <span class="fa-stack fa-2x">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-apple fa-stack-1x fa-inverse"></i>
+                </span>
+                <span class="title"> Mac </span>
+                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.dmg"
+                   target="_blank" class="download">Download</a>
+              </div>
+              <div class="mr-3 mr-sm-3 mb-3">
+                <span class="fa-stack fa-2x">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-windows fa-stack-1x fa-inverse"></i>
+                </span>
+                <span class="title"> Windows </span>
+                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika.exe"
+                   target="_blank" class="download">Download</a>
+              </div>
+              <div class="mr-3 mr-sm-3 mb-3">
+                <span class="fa-stack fa-2x">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-linux fa-stack-1x fa-inverse"></i>
+                </span>
+                <span class="title"> Linux </span>
+                <a href="http://muzika-release.s3-website-us-west-2.amazonaws.com/0.0.9/muzika-0.0.9-x86_64.AppImage"
+                   target="_blank" class="download">Download</a>
+              </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 p-sm-5">
+            <img src="assets/images/design/line-art-0.png" class="line-art">
             <div class="videoWrapper">
               <!-- Copy & Pasted from YouTube -->
               <img src="assets/images/video-thumbnail.jpg" width="530" height="315">
               <!--<iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"-->
-                      <!--allowfullscreen></iframe>-->
+              <!--allowfullscreen></iframe>-->
             </div>
           </div>
         </div>
