refactor(intro): mobile optimization

--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
@@ -4,7 +4,9 @@ h2 {
 }
 
 .section {
-  background: #192538;
+  background: url('../../../../assets/images/design/wave-3.png') no-repeat bottom #192538;
+  background-size: 100%;
+  padding-bottom: 160px;
 }
 
 .intro-section-title {
