--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -141,8 +141,12 @@
     min-height: 600px;
   }
 
+  .container {
+    padding-top: 0;
+  }
+
   .home-center {
-    top: 55px;
+    padding-bottom: 80px;
   }
 }
 
