--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.scss
@@ -133,6 +133,12 @@
   margin-top: -17px;
 }
 
+@media(max-width: 738px) {
+  .spinner {
+    display: none;
+  }
+}
+
 .double-bounce1, .double-bounce2 {
   width: 100%;
   height: 100%;
