refactor(intro): mzk image assets path fix

--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -13,13 +13,13 @@
       </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-sm-5">
       <div class="col-lg-4" *ngFor="let advisor of advisors">
         <div class="pt-4 pb-4 pr-3 pl-3">
           <div class="row">
             <div class="col-5 col-sm-6 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
-                <img [src]="'assets/images/advisors/' + advisor.imagePath" class="img-fluid rounded-circle img-thumbnail" width="130" height="130">
+                <img [src]="'assets/intro-img/advisors/' + advisor.imagePath" class="img-fluid rounded-circle img-thumbnail" width="130" height="130">
               </div>
             </div>
             <div class="col-7 col-sm-6 pt-5 pl-3">
