--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -4,6 +4,11 @@
       <brand-icon-muzika></brand-icon-muzika>
       <span>Muzika</span>
     </a>
+
+    <div class="mobile-only">
+      <i class="icon-lang" [ngClass]="lang"></i>
+    </div>
+
     <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"
        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fal fa-bars"></span>
