--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
@@ -13,7 +13,7 @@
       <div class="col-lg-3 mt-3" *ngFor="let member of members">
         <div class="team-box pt-4 pb-4 pl-2">
           <div class="team-img mr-2">
-            <img [src]="'assets/images/team/' + member.image" alt="" class="mx-auto d-block rounded-circle " height="90">
+            <img [src]="'assets/intro-img/team/' + member.image" alt="" class="mx-auto d-block rounded-circle " height="90">
           </div>
           <div class="team-desc text-left mt-4">
             <h6 class="team-name text-custom mb-1">{{member.name}}</h6>
