--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -43,7 +43,7 @@
     <p class="awards pt-5">
       {{'intro-leadership.awards' | translate}}
       <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb" target="_blank">
-        <img src="assets/images/forbes.png" class="ml-3" height="45">
+        <img src="assets/intro-img/forbes.png" class="ml-3" height="45">
       </a>
     </p>
   </div>
