--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -15,7 +15,7 @@
 
     <div class="row mt-sm-5">
       <div class="col-lg-4" *ngFor="let advisor of advisors">
-        <div class="pt-4 pb-4 pr-3 pl-3">
+        <div class="pt-sm-4 pb-4 pr-3 pl-3">
           <div class="row">
             <div class="col-5 col-sm-6 text-right">
               <div class="testimonial-client-img text-center pt-3 mb-3">
