--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
@@ -10,8 +10,8 @@
       </div>
     </div>
     <div class="row mt-3 pt-3">
-      <div class="col-lg-3 mt-3" *ngFor="let member of members">
-        <div class="team-box pt-4 pb-4 pl-2">
+      <div class="col-sm-3 col-6 mt-3" *ngFor="let member of members">
+        <div class="team-box pt-sm-4 pb-4 pl-2">
           <div class="team-img mr-2">
             <img [src]="'assets/intro-img/team/' + member.image" alt="" class="mx-auto d-block rounded-circle " height="90">
           </div>
