--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -18,8 +18,8 @@
       <div class="col pl-sm-4">
         <h5 class="mb-3">{{'intro-footer.community' | translate}}</h5>
         <ul class="mb-4 text-center">
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
+          <li class="mb-2"><a href="https://medium.com/muzika-official" target="_blank"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
+          <li class="mb-2"><a href="https://twitter.com/muzika_official" target="_blank"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
           <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram' | translate}}</a></li>
           <!--<li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>-->
           <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
